--- a/TextEditor/.classpath
+++ b/TextEditor/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="lib" path="/Users/danielkhen/Downloads/jazzy-0.5.2.src/dist/jazzy-bin/jazzy-core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
